commit translated contents

--- a/articles/cognitive-services/index.yml
+++ b/articles/cognitive-services/index.yml
@@ -12,12 +12,12 @@ metadata:
   manager: nitinme
   ms.custom: custom-portals-hub
   ms.date: 08/28/2020
-  ms.openlocfilehash: b758aaf1d71dd0136ed3390feb981d5e360abf7d
-  ms.sourcegitcommit: 04fb3a2b272d4bbc43de5b4dbceda9d4c9701310
+  ms.openlocfilehash: c4c364a6c448fcee3d3c7ad3b3b2b0c4d32fec92
+  ms.sourcegitcommit: 6a350f39e2f04500ecb7235f5d88682eb4910ae8
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/12/2020
-  ms.locfileid: "94565689"
+  ms.lasthandoff: 12/01/2020
+  ms.locfileid: "96462973"
 highlightedContent:
   items:
   - title: Cognitive Services とは
@@ -147,7 +147,7 @@ conceptualContent:
       text: ビッグ データの Cognitive Services
     - url: ./big-data/getting-started.md
       itemType: get-started
-      text: Azure Databricks と Synapse Analytics 内で Cognitive Services を使用する
+      text: Azure Databricks と Azure Synapse Analytics 内で Cognitive Services を使用する
     - url: ./big-data/samples-python.md
       itemType: reference
       text: Python サンプル
