--- a/articles/azure-portal/TOC.yml
+++ b/articles/azure-portal/TOC.yml
@@ -14,6 +14,8 @@
       href: ../virtual-machines/windows/quick-create-portal.md?toc=/azure/azure-portal/toc.json&bc=/azure/azure-portal/breadcrumb/toc.json
     - name: ダッシュボードを作成する
       items:
+        - name: Azure CLI
+          href: quickstart-portal-dashboard-azure-cli.md
         - name: Azure PowerShell
           href: quickstart-portal-dashboard-powershell.md
         - name: ARM テンプレート
@@ -25,6 +27,7 @@
       href: azure-portal-dashboard-share-access.md
     - name: プログラムによる Azure ダッシュボードの作成
       href: azure-portal-dashboards-create-programmatically.md
+      displayName: 'Azure CLI, az portal dashboard, az portal'
 - name: 操作方法ガイド
   items:
     - name: Azure portal の設定を管理する
