--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -62,98 +62,6 @@
       href: tutorial-lamp-stack.md
     - name: 18 - SSL による Web サーバーのセキュリティ保護
       href: tutorial-secure-web-server.md
-- name: サンプル
-  items:
-    - name: Azure CLI
-      items:
-        - name: CLI サンプルのインデックス
-          href: cli-samples.md
-        - name: VM の作成
-          items:
-            - name: 仮想マシンの作成
-              href: ./../scripts/virtual-machines-linux-cli-sample-create-vm-quick-create.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-            - name: 完全に構成された仮想マシンの作成
-              href: ./../scripts/virtual-machines-linux-cli-sample-create-vm.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-            - name: 可用性が高い仮想マシンの作成
-              href: ./../scripts/virtual-machines-linux-cli-sample-nlb.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-            - name: VM の作成と構成スクリプトの実行
-              href: ./../scripts/virtual-machines-linux-cli-sample-create-vm-nginx.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-            - name: WordPress がインストールされている VM の作成
-              href: ./../scripts/virtual-machines-linux-cli-sample-create-vm-wordpress.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-            - name: 管理 OS ディスクから VM を作成する
-              href: ./../scripts/virtual-machines-linux-cli-sample-create-vm-from-managed-os-disks.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-            - name: スナップショットから VM を作成する
-              href: ./../scripts/virtual-machines-linux-cli-sample-create-vm-from-snapshot.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-        - name: ストレージの管理
-          items:
-            - name: VHD からマネージド ディスクを作成する
-              href: ../scripts/virtual-machines-cli-sample-create-managed-disk-from-vhd.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-            - name: スナップショットからマネージド ディスクを作成する
-              href: ../scripts/virtual-machines-cli-sample-create-managed-disk-from-snapshot.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-            - name: 同じまたは別のサブスクリプションにマネージド ディスクをコピーする
-              href: ../scripts/virtual-machines-cli-sample-copy-managed-disks-to-same-or-different-subscription.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-            - name: ストレージ アカウントに VHD としてスナップショットをエクスポートする
-              href: ../scripts/virtual-machines-cli-sample-copy-snapshot-to-storage-account.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-            - name: ストレージ アカウントにマネージド ディスクの VHD をエクスポートする
-              href: ../scripts/virtual-machines-cli-sample-copy-managed-disks-vhd.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-            - name: 同じまたは別のサブスクリプションにスナップショットをコピーする
-              href: ../scripts/virtual-machines-cli-sample-copy-snapshot-to-same-or-different-subscription.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-        - name: ネットワークの仮想マシン
-          items:
-            - name: 仮想マシン間のネットワーク トラフィックのセキュリティ保護
-              href: ./../scripts/virtual-machines-linux-cli-sample-create-vm-nsg.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-        - name: セキュリティ保護された仮想マシン
-          items:
-            - name: VM とデータ ディスクを暗号化する
-              href: ./../scripts/virtual-machines-linux-cli-sample-encrypt-vm.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-        - name: 仮想マシンの監視
-          items:
-            - name: Azure Monitor ログを使用して VM を監視する
-              href: ./../scripts/virtual-machines-linux-cli-sample-create-vm-oms.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-        - name: トラブルシューティング
-          items:
-            - name: VM オペレーティング システム ディスクのトラブルシューティング
-              href: ./../scripts/virtual-machines-linux-cli-sample-mount-os-disk.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-    - name: Azure PowerShell
-      items:
-        - name: PowerShell サンプルのインデックス
-          href: powershell-samples.md
-        - name: 仮想マシンを作成する
-          items:
-            - name: 完全に構成された仮想マシンの作成
-              href: './../scripts/virtual-machines-linux-powershell-sample-create-vm.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json) | Creates a resource group, virtual machine, and all related resources.|'
-            - name: Docker が有効になっている VM を作成する
-              href: ./../scripts/virtual-machines-linux-powershell-sample-create-docker-host.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-            - name: VM の作成と構成スクリプトの実行
-              href: ./../scripts/virtual-machines-linux-powershell-sample-create-vm-nginx.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-            - name: WordPress がインストールされている VM の作成
-              href: ./../scripts/virtual-machines-linux-powershell-sample-create-vm-wordpress.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-            - name: 管理 OS ディスクから VM を作成する
-              href: ./../scripts/virtual-machines-powershell-sample-create-vm-from-managed-os-disks.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-            - name: スナップショットから VM を作成する
-              href: ./../scripts/virtual-machines-linux-powershell-sample-create-vm-from-snapshot.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-        - name: ストレージの管理
-          items:
-            - name: 同じまたは別のサブスクリプションの VHD からマネージド ディスクを作成する
-              href: ../scripts/virtual-machines-powershell-sample-create-managed-disk-from-vhd.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-            - name: スナップショットからマネージド ディスクを作成する
-              href: ../scripts/virtual-machines-powershell-sample-create-managed-disk-from-snapshot.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-            - name: ストレージ アカウントに VHD としてスナップショットをエクスポートする
-              href: ../scripts/virtual-machines-powershell-sample-copy-snapshot-to-storage-account.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-            - name: ストレージ アカウントにマネージド ディスクの VHD をエクスポートする
-              href: ../scripts/virtual-machines-powershell-sample-copy-managed-disks-vhd.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-            - name: VHD からスナップショットを作成する
-              href: ../scripts/virtual-machines-powershell-sample-create-snapshot-from-vhd.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-            - name: 同じサブスクリプションまたは別のサブスクリプションにスナップショットをコピーする
-              href: ../scripts/virtual-machines-powershell-sample-copy-snapshot-to-same-or-different-subscription.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-        - name: 仮想マシンの監視
-          items:
-            - name: Azure Monitor ログを使用して VM を監視する
-              href: ./../scripts/virtual-machines-linux-powershell-sample-create-vm-oms.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-            - name: 同じサブスクリプションまたは別のサブスクリプションにマネージド ディスクをコピーする
-              href: ../scripts/virtual-machines-powershell-sample-copy-managed-disks-to-same-or-different-subscription.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-            - name: PowerShell を使用してサブスクリプション内のすべての VM に関する詳細情報を収集する
-              href: ../scripts/virtual-machines-powershell-sample-collect-vm-details.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
 - name: 概念
   items:
     - name: イメージング
@@ -1042,6 +950,8 @@
           href: find-unattached-disks.md
         - name: アタッチされていないディスクの検出 - ポータル
           href: ../disks-find-unattached-portal.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
+        - name: Azure ディスクをゲスト ディスクにマップする
+          href: azure-to-guest-disk-mapping.md
         - name: File Storage を使用する
           href: mount-azure-file-storage-on-linux-using-smb.md
         - name: ディスクに関する FAQ
