--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -240,6 +240,9 @@
         - name: ビデオ オン デマンド
           displayName: 'failover, bcdr, HA, high availability'
           href: media-services-high-availability-encoding.md
+    - name: Media Services アーキテクチャ
+      displayName: architectures
+      href: architectures-concept.md
     - name: トラブルシューティング
       items:
         - name: よく寄せられる質問
