--- a/articles/synapse-analytics/toc.yml
+++ b/articles/synapse-analytics/toc.yml
@@ -109,6 +109,10 @@
                   displayname: vnet
                 - name: Synapse ワークスペースのマネージド プライベート エンドポイント
                   href: ./security/synapse-workspace-managed-private-endpoints.md
+                - name: Synapse ワークスペースのデータ流出防止
+                  href: ./security/workspace-data-exfiltration-protection.md
+                - name: プライベート リンク ハブの Synapse ワークスペース
+                  href: ./security/synapse-private-link-hubs.md
             - name: 認証とパススルー
               items:
                 - name: Azure Active Directory
@@ -121,8 +125,13 @@
             - name: アクセス制御
               items:
                 - name: 概要
-                  href: ./security/access-control.md
-                  displayname: 'access, control'
+                  href: ./security/synapse-workspace-access-control-overview.md
+                - name: Synapse RBAC
+                  href: ./security/synapse-workspace-synapse-rbac.md
+                - name: Synapse RBAC ロール
+                  href: ./security/synapse-workspace-synapse-rbac-roles.md
+                - name: Synapse RBAC ロールについて
+                  href: ./security/synapse-workspace-understand-what-role-you-need.md
                 - name: Synapse ワークスペースのマネージド ID
                   href: ./security/synapse-workspace-managed-identity.md
     - name: 操作方法ガイド
@@ -135,11 +144,19 @@
           items:
             - name: アクセス制御を管理する
               items:
+                - name: アクセス制御を設定する
+                  href: ./security/how-to-set-up-access-control.md
+                - name: Synapse ロールの割り当てを確認する
+                  href: ./security/how-to-review-synapse-rbac-role-assignments.md
+                - name: Synapse ロールの割り当てを管理する
+                  href: ./security/how-to-manage-synapse-rbac-role-assignments.md
                 - name: Azure Synapse ワークスペース マネージド ID のアクセス許可を設定する
                   href: security/how-to-grant-workspace-managed-identity-permissions.md
                   displayname: grant
-                - name: アクセス制御を設定する
-                  href: security/how-to-set-up-access-control.md
+            - name: データ流出防止
+              items:
+                - name: データ流出防止のワークスペースを作成および管理する
+                  href: security/how-to-create-a-workspace-with-data-exfiltration-protection.md
             - name: プライベート エンドポイントを管理する
               items:
                 - name: データ ソースへのマネージド プライベート エンドポイントを設定する
@@ -565,7 +582,7 @@
               href: ./spark/spark-dotnet.md
         - name: セキュリティ
           items:
-            - name: TokenLibrary を使用した資格情報のセキュリティ保護
+            - name: TokenLibrary を使用して資格情報を保護する
               href: ./spark/apache-spark-secure-credentials-with-tokenlibrary.md
         - name: パフォーマンスを最適化する
           items:
