commit translated contents

--- a/articles/azure-vmware/index.yml
+++ b/articles/azure-vmware/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: dikamath
   ms.author: dikamath
   ms.date: 11/19/2020
-  ms.openlocfilehash: 89601a7d12b2c9479ccc3edf9d37fa0195ac6ee8
-  ms.sourcegitcommit: 4295037553d1e407edeb719a3699f0567ebf4293
+  ms.openlocfilehash: c460df29183cbf40bee1f539435669121b3ee6ed
+  ms.sourcegitcommit: 4c89d9ea4b834d1963c4818a965eaaaa288194eb
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/30/2020
-  ms.locfileid: "96327425"
+  ms.lasthandoff: 12/04/2020
+  ms.locfileid: "96608420"
 landingContent:
 - title: Azure VMware Solution について
   linkLists:
@@ -124,6 +124,8 @@ landingContent:
   linkLists:
   - linkListType: reference
     links:
+    - text: Azure CLI
+      url: /cli/azure/ext/vmware/vmware
     - text: Azure PowerShell
       url: /powershell/module/az.vmware
     - text: よく寄せられる質問
