--- a/articles/firewall-manager/index.yml
+++ b/articles/firewall-manager/index.yml
@@ -9,13 +9,13 @@ metadata:
   ms.topic: landing-page
   author: vhorne
   ms.author: victorh
-  ms.date: 10/10/2019
-  ms.openlocfilehash: 16db3ae780109aee0733aa401c03d6b258e2c5c0
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.date: 12/04/2020
+  ms.openlocfilehash: f25fff23bc371a172a8ddc992d3261705e647f25
+  ms.sourcegitcommit: 4c89d9ea4b834d1963c4818a965eaaaa288194eb
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "87079002"
+  ms.lasthandoff: 12/04/2020
+  ms.locfileid: "96608386"
 landingContent:
 - title: Azure Firewall Manager について
   linkLists:
@@ -37,6 +37,8 @@ landingContent:
     links:
     - text: セキュリティ パートナー プロバイダーとは
       url: trusted-security-partners.md
+    - text: Check Point Cloudguard Connect を使用して仮想ハブをセキュリティで保護する
+      url: check-point-overview.md
   - linkListType: how-to-guide
     links:
     - text: セキュリティ パートナー プロバイダーのデプロイ
