--- a/articles/synapse-analytics/index.yml
+++ b/articles/synapse-analytics/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: julieMSFT
   ms.author: jrasnick
   ms.date: 12/01/2020
-  ms.openlocfilehash: 6de11d0830c332d19a133592b060caca1382b667
-  ms.sourcegitcommit: 6a350f39e2f04500ecb7235f5d88682eb4910ae8
+  ms.openlocfilehash: 4fe151be6bf542b387b7b8dea915918fd59f34f8
+  ms.sourcegitcommit: 4c89d9ea4b834d1963c4818a965eaaaa288194eb
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 12/01/2020
-  ms.locfileid: "96463348"
+  ms.lasthandoff: 12/04/2020
+  ms.locfileid: "96606888"
 landingContent:
 - title: Azure Synapse Analytics について
   linkLists:
@@ -25,8 +25,8 @@ landingContent:
     links:
     - text: Azure Synapse とは
       url: overview-what-is.md
-    - text: ヒントとベスト プラクティス
-      url: overview-cheat-sheet.md
+    - text: 用語
+      url: overview-terminology.md
     - text: よく寄せられる質問
       url: overview-faq.md
 - title: Synapse SQL
