--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -108,5 +108,7 @@
       href: faq.md
 - name: リファレンス
   items:
+    - name: Azure CLI
+      href: /cli/azure/ext/vmware/vmware
     - name: Azure PowerShell
       href: /powershell/module/az.vmware/
