--- a/articles/lighthouse/toc.yml
+++ b/articles/lighthouse/toc.yml
@@ -54,12 +54,18 @@
     - name: パートナー ID をリンクする
       displayName: 'partner earned credit, pec, mpn'
       href: ./how-to/partner-earned-credit.md
+    - name: 委任を更新する
+      displayName: upgrade
+      href: ./how-to/update-delegation.md
     - name: 委任へのアクセスを削除する
       displayName: 'delete, undelegate'
       href: ./how-to/remove-delegation.md
     - name: Azure Arc の統合
       displayName: 'server, kubernetes, hybrid, infrastructure'
       href: ./how-to/manage-hybrid-infrastructure-arc.md
+    - name: Azure Migrate の統合
+      displayName: 'migration, project, on-prem'
+      href: ./how-to/migration-at-scale.md
     - name: Azure Monitor の統合
       items:
         - name: Azure Monitor ログの大規模な使用
