--- a/articles/active-directory/cloud-provisioning/TOC.yml
+++ b/articles/active-directory/cloud-provisioning/TOC.yml
@@ -52,6 +52,8 @@
       items:
         - name: 変換
           href: how-to-transformation.md
+        - name: MS Graph API を使用した受信同期
+          href: how-to-inbound-synch-ms-graph.md
         - name: Azure AD の同期 API
           href: /graph/api/resources/synchronization-overview
     - name: トラブルシューティング
