--- a/articles/databox-online/TOC.yml
+++ b/articles/databox-online/TOC.yml
@@ -1,5 +1,5 @@
-- name: Azure Stack Edge Pro と Data Box Gateway のドキュメント
-  href: ./index.yml
+- name: Azure Stack Edge Pro のドキュメント
+  href: /azure/databox-online/
   expanded: true
 - name: Azure Stack Edge Pro - GPU
   items:
@@ -9,7 +9,7 @@
           href: azure-stack-edge-gpu-overview.md
     - name: クイックスタート
       items:
-        - name: はじめに
+        - name: 作業開始
           href: azure-stack-edge-gpu-quickstart.md
     - name: チュートリアル
       items:
@@ -372,15 +372,15 @@
     - name: リリース ノート
       items:
         - name: 2007 - 最新
-          href: data-box-gateway-2007-release-notes.md
+          href: ../databox-gateway/data-box-gateway-2007-release-notes.md
         - name: 1911
-          href: data-box-gateway-1911-release-notes.md
+          href: ../databox-gateway/data-box-gateway-1911-release-notes.md
         - name: 1906
-          href: data-box-gateway-1906-release-notes.md
+          href: ../databox-gateway/data-box-gateway-1906-release-notes.md
         - name: 1905
-          href: data-box-gateway-1905-release-notes.md
+          href: ../databox-gateway/data-box-gateway-1905-release-notes.md
         - name: 一般公開 (GA)
-          href: data-box-gateway-release-notes.md
+          href: ../databox-gateway/data-box-gateway-release-notes.md
     - name: リファレンス
       items:
         - name: Azure PowerShell
@@ -389,68 +389,6 @@
           href: /rest/api/databoxedgegateway
         - name: .NET SDK
           href: /dotnet/api/overview/azure/databoxedge/databoxgateway?view=azure-dotnet
-- name: Data Box Gateway
-  items:
-    - name: 概要
-      items:
-        - name: Data Box Gateway とは
-          href: data-box-gateway-overview.md
-    - name: チュートリアル
-      items:
-        - name: 1 - 準備
-          href: data-box-gateway-deploy-prep.md
-        - name: 2A - Hyper-V でのプロビジョニング
-          href: data-box-gateway-deploy-provision-hyperv.md
-        - name: 2B - VMware でのプロビジョニング
-          href: data-box-gateway-deploy-provision-vmware.md
-        - name: 3 - 接続、セットアップ、アクティブ化
-          href: data-box-gateway-deploy-connect-setup-activate.md
-        - name: 4 - 追加、共有への接続
-          href: data-box-gateway-deploy-add-shares.md
-    - name: 概念
-      items:
-        - name: 要件を確認する
-          href: data-box-gateway-system-requirements.md
-        - name: 制限を理解する
-          href: data-box-gateway-limits.md
-        - name: セキュリティの概要
-          href: data-box-gateway-security.md
-        - name: ユース ケースを確認する
-          href: data-box-gateway-use-cases.md
-    - name: 方法
-      items:
-        - name: 更新
-          href: data-box-gateway-apply-updates.md
-        - name: 管理する
-          items:
-            - name: 共有
-              href: data-box-gateway-manage-shares.md
-            - name: ユーザー
-              href: data-box-gateway-manage-users.md
-            - name: 帯域幅のスケジュール
-              href: data-box-gateway-manage-bandwidth-schedules.md
-            - name: アクセス、電源、接続性
-              href: data-box-gateway-manage-access-power-connectivity-mode.md
-            - name: PowerShell から
-              href: data-box-gateway-connect-powershell-interface.md
-        - name: モニター
-          href: data-box-gateway-monitor.md
-        - name: トラブルシューティング
-          href: data-box-gateway-troubleshoot.md
-        - name: Microsoft サポートに問い合わせる
-          href: azure-stack-edge-contact-microsoft-support.md
-    - name: リリース ノート
-      items:
-        - name: 2007 - 最新
-          href: data-box-gateway-2007-release-notes.md
-        - name: 1911
-          href: data-box-gateway-1911-release-notes.md
-        - name: 1906
-          href: data-box-gateway-1906-release-notes.md
-        - name: 1905
-          href: data-box-gateway-1905-release-notes.md
-        - name: 一般公開 (GA)
-          href: data-box-gateway-release-notes.md
 - name: リソース
   items:
     - name: Azure Stack Edge Pro C# モジュールのサンプル (.NET)
