--- a/articles/security/benchmarks/TOC.yml
+++ b/articles/security/benchmarks/TOC.yml
@@ -189,6 +189,10 @@
       href: ../../key-vault/general/security-baseline.md
     - name: Logic Apps のセキュリティ ベースライン
       href: ../../logic-apps/security-baseline.md
+    - name: Microsoft Cloud App Security ベースライン
+      href: /cloud-app-security/security-baseline.md
+    - name: Microsoft Defender for Identity のセキュリティ ベースライン
+      href: /defender-for-identity/security-baseline.md
     - name: Network Watcher のセキュリティベースライン
       href: ../../network-watcher/security-baseline.md
     - name: Power BI のベースライン
